--- a/Public/CSS/contact.css
+++ b/Public/CSS/contact.css
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-image: url("../images/Web\ 1920\ –\ 2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 #items-inner-div {
