--- a/Public/CSS/index.css
+++ b/Public/CSS/index.css
@@ -43,6 +43,10 @@
     height: auto !important;
 }
 
+#header-text p{
+    margin: 0px 30px;
+}
+
 #impact{
     font-size: 40px;
     font-family: 'Raleway', sans-serif;
@@ -195,4 +199,54 @@
     margin-top: 20px;
 }
 
+#iphone-horizontal-image{
+    height: 50%;
+}
+
+.image-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 938px){
+    #header-section{
+        flex-direction: column;
+        align-items: center;
+        padding: 20px 0px;
+    }
+
+    #header-text {
+        width: 80%;
+    }
+
+    #svg-div {
+        width: 100%;
+        margin-top: 50px;
+    }
+
+    #svg-header {
+        width: 100% !important;
+    }
+
+    #under-construction-div {
+        flex-direction: column;
+    }
+
+    .highlights-inner-div {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .highlights-inner-div img{
+        width: 80%;
+    }
+
+    #header-text p {
+        margin: 0px 0px;
+    }
+}
 
