--- a/Public/CSS/demo.css
+++ b/Public/CSS/demo.css
@@ -6,7 +6,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0px;
+    padding: 30px 0px;
+    margin: 20px;
 }
 
 #work-in-progress-div img{
@@ -37,3 +38,4 @@
     margin-bottom: 20px;
     box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
 }
+
