--- a/Public/CSS/index.css
+++ b/Public/CSS/index.css
@@ -83,6 +83,7 @@
 
 .highlight-div{
     padding: 50px 0px;
+    background-color: #a7bdbd26;
 }
 
 .highlight-div li{
@@ -125,7 +126,47 @@
 
 .highlights-inner-div{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
+.highlights-inner-div img{
+    height: 80%;
+    width: 80%;
+    margin-left: 20px;
+    border-radius: 15px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+}
+
+.highlights-inner-div h1{
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+
+#detail-div{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 80%;
+    margin-top: 50px;
+}
+
+.card-div{
+    border-radius: 15px;
+    margin: 20px;
+    padding: 25px;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+    width: 39%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-icon{
+    box-shadow: none !important;
+    width: 50px !important;
+    height: 50px !important;
 }
 
 #maillist-form input{
@@ -274,6 +315,7 @@
 
     .highlights-inner-div img{
         width: 80%;
+        margin-top: 25px;
     }
 
     #header-text p {
