--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -1,6 +1,7 @@
 body{
     padding: 0px;
     margin: 0px;
+    scroll-behavior: smooth;
 }
 
 h1{
@@ -39,7 +40,7 @@ li{
 #menu{
     display: flex;
     list-style: none;
-    background-color: #a7bdbd26;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 2px 1px -1px rgb(0 0 0 / 12%);
     margin: 0px;
 }
 
@@ -48,7 +49,6 @@ li{
     flex-direction: column;
     align-items: center;
     list-style: none;
-    background-color: #a7bdbd26;
     margin: 0px;
 }
 
@@ -140,6 +140,100 @@ ul{
     color: #2F2C41;
     font-size: 18px;
     font-weight: 100;
+}
+
+.title-div{
+    margin: 80px 0px;
+}
+
+.blog-main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.blog-title-div{
+    margin: 30px 200px -110px 200px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0 1px 0px 0 rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 2px 1px 0px rgb(0 0 0 / 12%);
+}
+
+.index-div{
+    background-color: #a7bdbd;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.index-div a{
+    text-decoration: none;
+    color: #2F2C41;
+}
+
+.text-div{
+    margin: 80px 0px 50px 0px;
+    width: 890px;
+    font-size: 18px;
+    color: #122b46;
+    letter-spacing: 1px;
+}
+
+.first-paragraph{
+    font-weight: bold;
+}
+
+.sub-title-blog{
+    margin: 30px 0px 5px 0px;
+    text-align: left;
+}
+
+.card{
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: auto;
+    margin: 30px 10px 20px 10px;
+    padding-bottom: 20px;
+    align-items: center;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #FFF;
+}
+
+.card-overview{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #a7bdbd26;
+}
+
+.card-header-div{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 200px;
+    width: 100%;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+}
+
+.card-header-div img{
+    width: 100%;
+    height: 100%;
+}
+
+.card-title-div p{
+    text-align: center;
 }
 
 #footer{
